--- a/templates/base.html
+++ b/templates/base.html
@@ -69,5 +69,5 @@
 
 
   </body>
-  <script src="{% static "star_social/js/master.js" %}" type="text/javascript" ></script>
+  <script src="{% static 'star_social/js/master.js' %}" type="text/javascript" ></script>
 </html>
